--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Sebastian Ramirez-Brunner",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-csslint": "^1.0.0",
