--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zype-project",
   "version": "1.0.0",
-  "description": "Zype Test project",
+  "description": "Zype Test Project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
